application/helm-charts/helm-template.yaml
---
# Source: user-management-backend-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-api-v1-user-management-backend-api
  labels:
    helm.sh/chart: user-management-backend-api-1.0.0
    app.kubernetes.io/name: user-management-backend-api
    app.kubernetes.io/instance: user-api-v1
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: user-management-backend-api
    app.kubernetes.io/instance: user-api-v1
---
# Source: user-management-backend-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api-v1-user-management-backend-api
  labels:
    helm.sh/chart: user-management-backend-api-1.0.0
    app.kubernetes.io/name: user-management-backend-api
    app.kubernetes.io/instance: user-api-v1
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: user-management-backend-api
      app.kubernetes.io/instance: user-api-v1
  template:
    metadata:
      labels:
        helm.sh/chart: user-management-backend-api-1.0.0
        app.kubernetes.io/name: user-management-backend-api
        app.kubernetes.io/instance: user-api-v1
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: user-api-v1-user-management-backend-api
      containers:
        - name: user-management-backend-api
          image: "store-management-api:1.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8090
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
---
# Source: user-management-backend-api/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-api-v1-user-management-backend-api
  labels:
    helm.sh/chart: user-management-backend-api-1.0.0
    app.kubernetes.io/name: user-management-backend-api
    app.kubernetes.io/instance: user-api-v1
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "chart-example.local"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-api-v1-user-management-backend-api
                port:
                  number: 8090
---
# Source: user-management-backend-api/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user-api-v1-user-management-backend-api
  labels:
    helm.sh/chart: user-management-backend-api-1.0.0
    app.kubernetes.io/name: user-management-backend-api
    app.kubernetes.io/instance: user-api-v1
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: gateway
      sectionName: http
  hostnames:
    - chart-example.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /headers
      backendRefs:
        - name: user-api-v1-user-management-backend-api
          port: 8090
          weight: 1
---
# Source: user-management-backend-api/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "user-api-v1-user-management-backend-api-test-connection"
  labels:
    helm.sh/chart: user-management-backend-api-1.0.0
    app.kubernetes.io/name: user-management-backend-api
    app.kubernetes.io/instance: user-api-v1
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['user-api-v1-user-management-backend-api:8090']
  restartPolicy: Never
